# Tree_Show

./: .clang-format  .gitattributes  .gitignore  BinaryTree.hpp  CMakeLists.txt  CXX_STD.h  MyTree.h  MyTree.hpp  NodeAble.hpp  config.h  main.cpp  readme.md  some_func.cpp  some_func.h  test111.h  记录表.md  问题记录.md  项目参数记录.md
BinaryTree/: BinaryTree.hpp  BinaryTreeStr.hpp  CMakeLists.txt  FuncForHeadNode.cpp  FuncForHeadNode.h  FuncForTreeStr.cpp  FuncForTreeStr.h  HeadNode.cpp  HeadNode.h  MyTree.hpp  NodeStr.hpp  NodeTemp.hpp  Node_temp.hpp  QStrNode.hpp  TreeHead.hpp  common_func.hpp  data_source.h  get_test_data.cpp  get_test_data.h  main.cpp  main1.cpp  some_func.cpp  some_func.h
BinaryTree/container/: CMakeLists.txt  container.hpp  duque_test.cpp  vector_test.cpp
BinaryTree/弃用/: common_func.hpp
MainWin/: BinaryTreeWin.h  BinaryTreeWin.ui  CMakeLists.txt  MyGraphicsItem.cpp  MyGraphicsItem.h  MyLineItem.cpp  MyLineItem.h  ThItemGroup.h  ThScene.cpp  ThScene.h  buildtree.h  main.cpp  main2.cpp  main3.cpp  mainRes.qrc  mainwin.cpp  mainwin.h  mainwin.ui  settingWin.cpp  settingWin.h  test.cpp  testAA.cpp  testPy.py  uui_mainwin.h  widget.cpp  widget.h
MainWin/Anim/: AnimManager.cpp  AnimManager.h  Anim_Bin.h  Anim_Bin1.h  CMakeLists.txt  GrapAnimItem.cpp  GrapAnimItem.h
MainWin/GrapUi/: CMakeLists.txt  GrapUi.cpp  GrapUi.h  GrapUiManager.cpp  GrapUiManager.h  GrapUi_Bin.h  ui_res.qrc
MainWin/GraphicsItemManager/: CMakeLists.txt  GrapItemManager.cpp  GrapItemManager.h  GrapLineItem.cpp  GrapLineItem.h  GrapMoveItem.cpp  GrapMoveItem.h  GrapNodeItem.cpp  GrapNodeItem.h  Grap_Bin.h  readme.md
MainWin/Res/: BinaryTreeWin.ui  CMakeLists.txt  res.qrc  settingWin.ui
MainWin/Res/img/弃用/: zengjiaanniu.eps
MainWin/Res/include/: uix_BinaryTreeWin.h  uix_settingWin.h
data/: somedata.db  string.csv  string.txt  string.xlsx
