
project(container)

# find_package(GTest REQUIRED COMPONENTS gtest gtest_main
#   PATHS "E:\\code\\gtest\\mingw11.2\\lib\\cmake"
# )

# add_executable(vector_test vector_test.cpp)
# target_link_libraries(vector_test
#     PRIVATE
#     GTest::gtest
#     Qt6::Core
# )

# add_executable(duque_test duque_test.cpp)
# target_link_libraries(duque_test
#     PRIVATE
#     GTest::gtest
#     Qt6::Core
# )